--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -13,6 +13,6 @@
 	<color name="alarm_day_colour">#3080A2</color>
 	<color name="dark_green">#006400</color>
 	<color name="pergamena">#FFFFC2</color>
-	
+	<color name="marronechiaro">#F5DEB3</color>
 	<color name="senape">#FFE118</color>
 </resources>
