--- a/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
+++ b/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/senape"
+    android:background="@color/marronechiaro">
 
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/indicator"
