--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
@@ -4,6 +4,7 @@
    	android:id="@+id/ffriends_alert_container_out"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/fragment_border_side"
     android:gravity="right"
     android:orientation="vertical" >
 
@@ -18,9 +19,6 @@
         android:id="@+id/relvativeFFLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:gravity="center|left" >
 
@@ -31,21 +29,21 @@
             android:background="@drawable/btn_facebook_logout"
             android:focusableInTouchMode="true" />
 
-        <TextView
-            android:id="@+id/ff_txtUserFFLoggedMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/btnLogOut"
-            android:layout_margin="5dp"
-            android:layout_toRightOf="@id/btnLogOut"
-            android:text="Benvenuto"
-            android:textSize="15sp" />
-
         <ImageView
             android:id="@+id/ff_profilePic"
             android:layout_width="50dp"
             android:layout_height="52dp"
             android:layout_alignParentRight="true" />
+
+        <TextView
+            android:id="@+id/ff_txtUserFFLoggedMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="Benvenuto"
+            style="@style/FragmentTitle"
+             />
 
     </RelativeLayout>
 
@@ -54,7 +52,7 @@
 	    android:name="com.google.android.gms.maps.SupportMapFragment"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:layout_margin="5dp"
+	    android:layout_marginTop="@dimen/fragment_border_top"
 	    android:layout_weight="0" />
 
 </LinearLayout>
