--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
@@ -66,9 +66,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/stepcounter_statistic"
-                    android:textColor="@color/maroon"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    
+                    style="@style/FragmentTitle"
+                     />
 
                 <TableRow
                     android:id="@+id/tableRowSC2"
