--- a/EclipseProg/Scouthis/res/values/styles.xml
+++ b/EclipseProg/Scouthis/res/values/styles.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+
     </style>
 
     <!-- Application theme. -->
@@ -25,7 +20,7 @@
     </style>
     
     <!--  from sveglia project START -->
-        <style name="Root">
+    <style name="Root">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/undo_bar_height</item>
         <item name="android:layout_gravity">bottom|center_horizontal</item>
@@ -68,6 +63,24 @@
         <item name="android:background">@color/divider</item>
     </style>
 
+    <style name="FragmentTitle">
+        <item name="android:textColor">@color/dark_green</item>
+        <item name="android:textSize">20sp</item> 
+    </style>
+    
+    <style name="FragmentTextIndication">
+        <item name="android:textColor">@color/dark_green</item>
+        <item name="android:textSize">20sp</item> 
+    </style>
+   
+    
+    <!--  NON FUNZIONA !!!!!!  -->
+    <style name="FragmentCircularButton">
+        <!--   <item name="app:cb_radius">20dip</item> -->
+        
+    </style>
+    
+    
     <style name="Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
