--- a/EclipseProg/Scouthis/res/layout/alarms_list_row.xml
+++ b/EclipseProg/Scouthis/res/layout/alarms_list_row.xml
@@ -63,37 +63,35 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/interr_scritta_off"
+                    android:id="@+id/interr_scritta_on"
+                    style="@style/FragmentAlarmSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:gravity="top"
                     android:layout_marginLeft="2dip"
-                    android:text="ON"
-                    style="@style/FragmentAlarmSwitch"
-                     />
+                    android:gravity="top"
+                    android:text="ON" />
 
                 <ImageView
                     android:id="@+id/interrutt"
                     android:layout_width="30dip"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@+id/interr_scritta_off"
+                    android:layout_toLeftOf="@+id/interr_scritta_on"
                     android:scaleType="fitCenter"
                     android:src="@drawable/interr_on" />
 
                 <TextView
-                    android:id="@+id/interr_scritta_offf"
+                    android:id="@+id/interr_scritta_off"
+                    style="@style/FragmentAlarmSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="2dip"
                     android:layout_toLeftOf="@+id/interrutt"
                     android:gravity="top"
-                    android:layout_marginRight="2dip"
-                    android:text="OFF"
-                    style="@style/FragmentAlarmSwitch"
-                    />
+                    android:text="OFF" />
 
             </RelativeLayout>
 
