--- a/EclipseProg/Scouthis/res/values/styles.xml
+++ b/EclipseProg/Scouthis/res/values/styles.xml
@@ -64,7 +64,7 @@
     </style>
 
     <style name="FragmentTitle">
-        <item name="android:textColor">@color/dark_green</item>
+        <item name="android:textColor">@color/fragment_title</item>
         <item name="android:textSize">20sp</item> 
     </style>
     
@@ -79,11 +79,11 @@
     </style>
    
      <style name="main_tabbed">
-     	<item name="android:background">@color/marronechiaro</item>
+     	<item name="android:background">@color/tabs_background</item>
     </style>
     
     <style name="main_tabs">
-     	<item name="android:background">@color/pergamena</item>
+     	<item name="android:background">@drawable/sfnd_tit_tabs</item>
     </style>
     
     <style name="FragmentAlarmSwitch">
@@ -154,7 +154,7 @@
     <style name="CustomTabPageIndicator" parent="Widget.TabPageIndicator">
         <item name="android:background">@drawable/custom_tab_indicator</item>
         <item name="android:textAppearance">@style/CustomTabPageIndicator.Text</item>
-        <item name="android:textColor">#FF555555</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:divider">@drawable/custom_tab_indicator_divider</item>
         
